@@ -37,6 +37,7 @@ Version 1.12.2+dev:
    * Made silence.ogg larger to work around a crash involving the multiplayer
      lobby with music and sound enabled (bug #23633, possibly also bug #23599,
      bug #23203, bug #23026).
+   * Disallowed inclusion of .pbl files from WML (bug #23504).
 
 Version 1.12.2:
  * Security fixes:
